# ttg

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  tg_client.py  ttg_config.example.json
tests/: test_chat_key_bindings.py  test_runtime_tools.py
