[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttg-terminal"
version = "0.1.0"
description = "Terminal Telegram third-party client using MTProto"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "telethon>=1.34,<2",
]
authors = [
  { name = "ttg contributors" },
]
keywords = ["telegram", "terminal", "tui", "mtproto"]
classifiers = [
  "Environment :: Console :: Curses",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat",
]

[project.scripts]
ttg = "tg_client:main"

[tool.setuptools]
py-modules = ["tg_client"]
